ambulancias competencia distancias 2

--- a/or-in-action/competencia_mcp.html
+++ b/or-in-action/competencia_mcp.html
@@ -464,7 +464,7 @@
 
             <button id="try-again-btn" class="btn btn-primary" style="margin-top: 20px;">🔄 Intentar de nuevo</button>
             <button id="new-instance-btn" class="btn btn-secondary" style="margin-top: 20px;">📋 Nueva instancia</button>
-            <button id="submit-solution-btn" class="btn btn-primary" style="margin-top: 20px; background: linear-gradient(135deg, #9ea93f, #60712f);">🏆 Registrar Solución Oficial</button>
+            <button id="submit-solution-btn" class="btn btn-primary" style="margin-top: 20px; background: linear-gradient(135deg, #9ea93f, #60712f);">🏆 Registrar solución </button>
         </div>
     </div>
 
