--- a/algoritmos/greedy_knapsack.html
+++ b/algoritmos/greedy_knapsack.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZLLCPFX9W7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZLLCPFX9W7');
+</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Algoritmo Greedy - Problema de la Mochila</title>
+    <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #f0f4f8;
-            color: #1a202c;
+            background-color: #EEDFCF;
+            color: #1a1a1a;
             display: flex;
             flex-direction: column;
-            align-items: center;
-            justify-content: center;
             min-height: 100vh;
-            padding: 2rem;
-            text-align: center;
+        }
+        #main-content {
+            flex: 1;
         }
         .container {
             background-color: white;
-            padding: 4rem 2rem 2rem 2rem;
+            padding: 2rem;
             border-radius: 1rem;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             max-width: 95%;
-            position: relative;
+            margin: 2rem auto;
         }
         .btn {
             padding: 0.75rem 1.5rem;
@@ -56,34 +69,14 @@
         .btn-upload:hover {
             background-color: #3182ce;
         }
-        .btn-back {
-            position: absolute;
-            top: 1rem;
-            left: 1rem;
-            background-color: #4299e1;
-            color: white;
-            padding: 0.5rem 1rem;
-            border-radius: 0.5rem;
-            font-weight: 600;
-            cursor: pointer;
-            transition: background-color 0.3s, transform 0.1s;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-            z-index: 10;
-            text-decoration: none;
-        }
-        .btn-back:hover {
-            background-color: #3182ce;
-            transform: translateY(-2px);
-        }
         .message-box {
-            margin-top: 1.5rem;
-            padding: 1rem;
+            margin: 1.5rem auto;
+            padding: 0.75rem 1.5rem;
             border-radius: 0.5rem;
             font-weight: 600;
             display: none;
+            max-width: 500px;
+            text-align: center;
         }
         .message-box.show {
             display: block;
@@ -308,27 +301,45 @@
         }
     </style>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+<body class="bg-slate-50 text-slate-800">
 
-    <div class="container flex flex-col items-center">
-        <a href="index.html" class="btn-back">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <path d="M19 12H5M12 19l-7-7 7-7"/>
-            </svg>
-            Regresar
-        </a>
-        
-        <h1 class="text-4xl font-extrabold text-gray-800 mb-2">Algoritmo Greedy - Problema de la Mochila</h1>
-        <p class="text-gray-600 mb-4 max-w-3xl">
-            El problema de la mochila (knapsack) consiste en seleccionar elementos con beneficio y peso para maximizar el beneficio total sin exceder la capacidad de la mochila. 
-            Los algoritmos greedy utilizan diferentes estrategias: <strong>solo peso</strong> (más ligeros primero), <strong>solo ganancia</strong> (más valiosos primero), 
-            y <strong>ganancia/peso</strong> (mejor ratio primero).
-        </p>
+    <div id="main-content">
+        <div class="container mx-auto p-4 md:p-8 relative">
+        <div class="absolute top-4 right-4 flex items-center gap-4 z-10">
+            <a href="../pasarela/buymeacoffee.html" 
+               target="_blank" 
+               rel="noopener noreferrer" 
+               class="inline-flex items-center gap-2 bg-yellow-400 text-gray-900 font-bold py-2 px-4 rounded-lg shadow-sm transition-colors duration-300 hover:bg-yellow-500">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
+                    <path d="M1 12.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5M2 4v6h10V4zm11.5 0a.5.5 0 0 0-.5.5v5a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-5a.5.5 0 0 0-.5-.5zM1 3.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5m10.854-1.354a.5.5 0 0 0-.708 0L9 3.293 7.854 2.146a.5.5 0 1 0-.708.708L8.293 4 7.146 5.146a.5.5 0 1 0 .708.708L9 4.707l1.146 1.147a.5.5 0 0 0 .708-.708L9.707 4l1.147-1.146a.5.5 0 0 0 0-.708"/>
+                </svg>
+                <span>Invítame un café</span>
+            </a>
 
-        <div class="info-panel">
-            <h4>📦 Información de la mochila</h4>
-            <div id="knapsack-info">
-                <p>Sube un archivo para comenzar...</p>
+            <a href="algoritmos-greedy.html" class="bg-white hover:bg-slate-100 text-slate-600 font-semibold py-2 px-4 border border-slate-200 rounded-lg shadow-sm flex items-center transition-colors">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+                </svg>
+                Inicio
+            </a>
+        </div>
+
+        <!-- Header -->
+        <header class="text-center mb-8 pt-16">
+            <h1 class="text-4xl font-bold text-slate-900">Algoritmo Greedy - Problema de la Mochila</h1>
+            <p class="text-lg text-slate-600 mt-2 max-w-3xl mx-auto">
+                El problema de la mochila (knapsack) consiste en seleccionar elementos con beneficio y peso para maximizar el beneficio total sin exceder la capacidad de la mochila. 
+                Los algoritmos greedy utilizan diferentes estrategias: <strong>solo peso</strong> (más ligeros primero), <strong>solo ganancia</strong> (más valiosos primero), 
+                y <strong>ganancia/peso</strong> (mejor ratio primero).
+            </p>
+        </header>
+
+        <div class="flex justify-center mb-6">
+            <div class="info-panel" style="max-width: 500px; width: 100%;">
+                <h4>📦 Información de la mochila</h4>
+                <div id="knapsack-info">
+                    <p>Sube un archivo para comenzar...</p>
+                </div>
             </div>
         </div>
 
@@ -796,6 +807,20 @@
             </div>
         </div>
     </div>
+    </div>
+
+    <!-- Footer & Contact -->
+    <footer id="contact" class="bg-[#333333] text-white">
+        <div class="container2 mx-auto px-6 py-10">
+            <div class="text-center">
+             <!--   <h2 class="text-2xl font-bold mb-4">Ponte en Contacto</h2> -->
+                <p class="text-gray-300 mb-2">Si tienes alguna pregunta o te gustaría colaborar, no dudes en escribirme.</p>
+              <!--  <a href="mailto:jvelasco@cimat.mx" class="text-[#80CBC4] text-lg hover:underline">jvelasco@cimat.mx</a> -->
+                <a href="../contacto.html" class="text-[#80CBC4] text-lg hover:underline">Contacto</a>
+                <p class="text-gray-500 mt-8 text-sm">&copy; 2025 Jonás Velasco. Todos los derechos reservados.</p>
+            </div>
+        </div>
+    </footer>
 
 </body>
 </html>
