--- a/recursos/docencia.html
+++ b/recursos/docencia.html
@@ -176,7 +176,7 @@
                 <div class="grid md:grid-cols-2 gap-6">
                     <!-- Placeholder para contenido futuro -->
                     <div class="bg-gray-50 p-6 rounded-lg border border-gray-200 flex flex-col">
-                        <h3 class="text-lg font-semibold text-[#004D40] mb-3">Notas sobre algoritmos</h3>
+                        <h3 class="text-lg font-semibold text-[#004D40] mb-3">Algoritmos Greedy</h3>
                         <p class="text-gray-600 mb-4">Material de apoyo para las talleres.</p>
                         <ul class="space-y-2 text-sm text-gray-600 mb-4 flex-grow">
                             <li>• Optimización y metaheurísticas</li>
@@ -187,6 +187,21 @@
                             </a>
                         </div>
                     </div>
+
+                <div class="grid md:grid-cols-2 gap-6">
+                    <!-- Placeholder para contenido futuro -->
+                    <div class="bg-gray-50 p-6 rounded-lg border border-gray-200 flex flex-col">
+                        <h3 class="text-lg font-semibold text-[#004D40] mb-3">Algoritmos de búsqueda y optimización</h3>
+                        <p class="text-gray-600 mb-4">Material de apoyo para las talleres.</p>
+                        <ul class="space-y-2 text-sm text-gray-600 mb-4 flex-grow">
+                            <li>• Optimización y metaheurísticas</li>
+                        </ul>
+                        <div class="flex justify-end mt-4">
+                            <a href="../algoritmos/algoritmos-greedy.html" class="inline-block bg-[#00796B] text-white px-4 py-2 rounded-lg hover:bg-[#004D40] transition-colors duration-300 text-sm">
+                                Acceder
+                            </a>
+                        </div>
+                    </div>                    
 
                     <div class="bg-gray-50 p-6 rounded-lg border border-gray-200 flex flex-col">
                         <h3 class="text-lg font-semibold text-[#004D40] mb-3">Notas</h3>
