--- a/algoritmos/algoritmos-greedy.html
+++ b/algoritmos/algoritmos-greedy.html
@@ -106,7 +106,7 @@
                                     Investigación de Operaciones
                                 </div>
                             </a>
-                            <a href="../programacion.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-[#00796B] transition-colors">
+                            <a href="../recursos/programacion.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-[#00796B] transition-colors">
                                 <div class="flex items-center">
                                     <svg class="w-4 h-4 mr-3 text-orange-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"></path>
