--- a/algoritmos/busqueda-local.html
+++ b/algoritmos/busqueda-local.html
@@ -218,7 +218,7 @@
                         </div>
                         
                         <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-4">
-                            <a href="/1/BL_cuadricula.html" class="bg-white p-4 rounded-lg border border-gray-200 hover:border-indigo-300 hover:shadow-md transition-all duration-300 group">
+                            <a href="1/BL_cuadricula.html" class="bg-white p-4 rounded-lg border border-gray-200 hover:border-indigo-300 hover:shadow-md transition-all duration-300 group">
                                 <div class="flex items-center mb-2">
                                     <span class="text-2xl mr-3">📍</span>
                                     <h5 class="font-semibold text-[#004D40] group-hover:text-indigo-600">Hill Climbing 1</h5>
