--- a/algoritmos/1/BL_cuadricula.html
+++ b/algoritmos/1/BL_cuadricula.html
@@ -23,7 +23,7 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #EEDFCF;
+            background-color: #f0f4f8;
             color: #1a202c;
             display: flex;
             flex-direction: column;
@@ -201,7 +201,7 @@
                     <span>Invítame un café</span>
                 </a>
 
-                <a href="busqueda-local.html" class="btn-home">
+                <a href="../busqueda-local.html" class="btn-home">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
                     </svg>
