--- a/algoritmos/6/BL_cuadricula_simulated_annealing.html
+++ b/algoritmos/6/BL_cuadricula_simulated_annealing.html
@@ -217,6 +217,10 @@
             font-weight: 700;
             color: #2d3748;
         }
+        input[type="range"]:disabled {
+            opacity: 0.5;
+            cursor: not-allowed;
+        }
     </style>
 </head>
 <body>
@@ -270,6 +274,45 @@
             <div class="stat-box">
                 <div class="stat-label">Mejor Valor</div>
                 <div class="stat-value" id="best-value">-</div>
+            </div>
+        </div>
+
+        <!-- Controles de parámetros -->
+        <div class="mt-6 max-w-2xl mx-auto space-y-4">
+            <div class="bg-white p-4 rounded-lg border border-gray-200">
+                <label for="temperature-input" class="block text-sm font-semibold text-gray-700 mb-2">
+                    Temperatura inicial:
+                </label>
+                <div class="flex items-center gap-4">
+                    <input 
+                        type="range" 
+                        id="temperature-input" 
+                        min="10" 
+                        max="200" 
+                        value="100" 
+                        class="flex-grow h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer"
+                    >
+                    <span id="temperature-display" class="text-lg font-bold text-[#004D40] min-w-[4rem] text-center">100</span>
+                </div>
+                <p class="text-xs text-gray-500 mt-2">Controla la temperatura inicial del algoritmo (10-200)</p>
+            </div>
+
+            <div class="bg-white p-4 rounded-lg border border-gray-200">
+                <label for="iterations-input" class="block text-sm font-semibold text-gray-700 mb-2">
+                    Número máximo de iteraciones:
+                </label>
+                <div class="flex items-center gap-4">
+                    <input 
+                        type="range" 
+                        id="iterations-input" 
+                        min="20" 
+                        max="200" 
+                        value="100" 
+                        class="flex-grow h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer"
+                    >
+                    <span id="iterations-display" class="text-lg font-bold text-[#004D40] min-w-[4rem] text-center">100</span>
+                </div>
+                <p class="text-xs text-gray-500 mt-2">Define cuántas iteraciones ejecutará el algoritmo (20-200)</p>
             </div>
         </div>
 
