--- a/algoritmos/6/BL_cuadricula_simulated_annealing.html
+++ b/algoritmos/6/BL_cuadricula_simulated_annealing.html
@@ -245,7 +245,7 @@
                     Inicio
                 </a>
             </div>
-        <h1 class="text-4xl font-extrabold text-gray-800 mb-2">Simulated Annealing</h1>
+        <h1 class="text-4xl font-extrabold text-gray-800 mb-2">Recocido Simulado</h1>
         <p class="text-gray-600 mb-4">
             El Simulated Annealing es un algoritmo de optimización inspirado en el proceso de recocido en metalurgia. Busca el valor mínimo en una cuadrícula, pero a diferencia del descenso simple, puede aceptar movimientos a vecinos con valores más altos con cierta probabilidad que disminuye con el tiempo (temperatura). Esto le permite escapar de óptimos locales y explorar mejor el espacio de búsqueda para encontrar el óptimo global.
         </p>
@@ -278,41 +278,62 @@
         </div>
 
         <!-- Controles de parámetros -->
-        <div class="mt-6 max-w-2xl mx-auto space-y-4">
-            <div class="bg-white p-4 rounded-lg border border-gray-200">
-                <label for="temperature-input" class="block text-sm font-semibold text-gray-700 mb-2">
-                    Temperatura inicial:
-                </label>
-                <div class="flex items-center gap-4">
-                    <input 
-                        type="range" 
-                        id="temperature-input" 
-                        min="10" 
-                        max="200" 
-                        value="100" 
-                        class="flex-grow h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer"
-                    >
-                    <span id="temperature-display" class="text-lg font-bold text-[#004D40] min-w-[4rem] text-center">100</span>
+        <div class="mt-6 max-w-4xl mx-auto">
+            <div class="grid md:grid-cols-3 gap-4">
+                <div class="bg-white p-4 rounded-lg border border-gray-200">
+                    <label for="temperature-input" class="block text-sm font-semibold text-gray-700 mb-2">
+                        Temperatura inicial:
+                    </label>
+                    <div class="flex items-center gap-4">
+                        <input 
+                            type="range" 
+                            id="temperature-input" 
+                            min="10" 
+                            max="200" 
+                            value="100" 
+                            class="flex-grow h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer"
+                        >
+                        <span id="temperature-display" class="text-lg font-bold text-[#004D40] min-w-[4rem] text-center">100</span>
+                    </div>
+                    <p class="text-xs text-gray-500 mt-2">Controla la temperatura inicial (10-200)</p>
                 </div>
-                <p class="text-xs text-gray-500 mt-2">Controla la temperatura inicial del algoritmo (10-200)</p>
-            </div>
 
-            <div class="bg-white p-4 rounded-lg border border-gray-200">
-                <label for="iterations-input" class="block text-sm font-semibold text-gray-700 mb-2">
-                    Número máximo de iteraciones:
-                </label>
-                <div class="flex items-center gap-4">
-                    <input 
-                        type="range" 
-                        id="iterations-input" 
-                        min="20" 
-                        max="200" 
-                        value="100" 
-                        class="flex-grow h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer"
-                    >
-                    <span id="iterations-display" class="text-lg font-bold text-[#004D40] min-w-[4rem] text-center">100</span>
+                <div class="bg-white p-4 rounded-lg border border-gray-200">
+                    <label for="iterations-input" class="block text-sm font-semibold text-gray-700 mb-2">
+                        Número máximo de iteraciones:
+                    </label>
+                    <div class="flex items-center gap-4">
+                        <input 
+                            type="range" 
+                            id="iterations-input" 
+                            min="20" 
+                            max="200" 
+                            value="100" 
+                            class="flex-grow h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer"
+                        >
+                        <span id="iterations-display" class="text-lg font-bold text-[#004D40] min-w-[4rem] text-center">100</span>
+                    </div>
+                    <p class="text-xs text-gray-500 mt-2">Define cuántas iteraciones (20-200)</p>
                 </div>
-                <p class="text-xs text-gray-500 mt-2">Define cuántas iteraciones ejecutará el algoritmo (20-200)</p>
+
+                <div class="bg-white p-4 rounded-lg border border-gray-200">
+                    <label for="cooling-input" class="block text-sm font-semibold text-gray-700 mb-2">
+                        Tasa de enfriamiento:
+                    </label>
+                    <div class="flex items-center gap-4">
+                        <input 
+                            type="range" 
+                            id="cooling-input" 
+                            min="80" 
+                            max="99" 
+                            step="1"
+                            value="95" 
+                            class="flex-grow h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer"
+                        >
+                        <span id="cooling-display" class="text-lg font-bold text-[#004D40] min-w-[4rem] text-center">0.95</span>
+                    </div>
+                    <p class="text-xs text-gray-500 mt-2">Velocidad de enfriamiento (0.80-0.99)</p>
+                </div>
             </div>
         </div>
 
