recursos busqueda greedy cambio

--- a/algoritmos/greedy_knapsack.html
+++ b/algoritmos/greedy_knapsack.html
@@ -770,7 +770,7 @@
                 <div style="background-color: #f7fafc; padding: 1rem; border-radius: 0.5rem; border-left: 4px solid #4299e1; margin-bottom: 1rem;">
                     <p style="margin: 0; font-family: monospace; font-size: 0.875rem;">
                         <strong>Línea 1:</strong> [número_de_items] [capacidad_mochila]<br>
-                        <strong>Líneas siguientes:</strong> [peso] [ganancia] (un item por línea)
+                        <strong>Líneas siguientes:</strong> [ganancia] [peso] (un item por línea)
                     </p>
                 </div>
 
@@ -791,8 +791,8 @@
                     <p style="margin: 0; font-size: 0.875rem; color: #4a5568;">
                         <strong>Explicación:</strong><br>
                         • Primera línea: <strong>19</strong> items con capacidad máxima de <strong>31181</strong><br>
-                        • Cada línea siguiente: peso y ganancia de un item<br>
-                        • Ejemplo: El primer item tiene peso <strong>1945</strong> y ganancia <strong>4990</strong>
+                        • Cada línea siguiente: ganancia y peso de un item<br>
+                        • Ejemplo: El primer item tiene ganancia <strong>1945</strong> y peso <strong>4990</strong>
                     </p>
                 </div>
 
