--- a/simulador/TSP_GA.html
+++ b/simulador/TSP_GA.html
@@ -49,7 +49,7 @@
                 <span class="hidden sm:inline">Invítame un café</span>
                 <span class="sm:hidden">Café</span>
             </a>
-            <a href="../index.html" class="bg-white hover:bg-slate-100 text-slate-600 font-semibold py-2 px-3 sm:px-4 border border-slate-200 rounded-lg shadow-sm flex items-center transition-colors text-sm sm:text-base">
+            <a href="../recursos/investigacion-operaciones.html" class="bg-white hover:bg-slate-100 text-slate-600 font-semibold py-2 px-3 sm:px-4 border border-slate-200 rounded-lg shadow-sm flex items-center transition-colors text-sm sm:text-base">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 sm:h-5 sm:w-5 mr-1 sm:mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" /></svg>
                 Inicio
             </a>
