--- a/algoritmos/algoritmos-greedy.html
+++ b/algoritmos/algoritmos-greedy.html
@@ -217,6 +217,14 @@
                                 </div>
                                 <p class="text-sm text-gray-600">Compara tres estrategias greedy: solo peso (más ligeros primero), solo ganancia (más valiosos primero) y ganancia/peso (mejor ratio primero)</p>
                             </a>
+                            
+                            <a href="representaciones_mochila.html" class="bg-white p-4 rounded-lg border border-gray-200 hover:border-green-300 hover:shadow-md transition-all duration-300 group">
+                                <div class="flex items-center mb-2">
+                                    <span class="text-2xl mr-3">💻</span>
+                                    <h5 class="font-semibold text-[#004D40] group-hover:text-green-600">Representaciones para el Problema de la Mochila</h5>
+                                </div>
+                                <p class="text-sm text-gray-600">Explora diferentes formas de codificar soluciones: binaria, entera (índices), random keys y permutación. Compara ventajas, desventajas y pseudocódigo de evaluación</p>
+                            </a>
                         </div>
                     </div>
 
