--- a/game/game.html
+++ b/game/game.html
@@ -49,17 +49,17 @@
             <div class="info-panel">
                 <h3 class="panel-title">💡 Pista</h3>
                 <p id="hint" class="panel-text">Intenta diferentes combinaciones y observa cómo afectan el resultado.</p>
-                <button class="btn btn-secondary btn-small" onclick="showHint()">Ver Pista Avanzada</button>
+                <button class="btn btn-secondary btn-small" onclick="showHint()">Ver pista avanzada</button>
             </div>
 
             <div class="info-panel stats-panel">
-                <h3 class="panel-title">📈 Tu Progreso</h3>
+                <h3 class="panel-title">📈 Tu progreso</h3>
                 <div class="stat-item">
                     <span>Intentos:</span>
                     <strong id="attempts">0</strong>
                 </div>
                 <div class="stat-item">
-                    <span>Mejor Puntuación:</span>
+                    <span>Mejor puntuación:</span>
                     <strong id="bestScore">0</strong>
                 </div>
                 <div class="stat-item">
@@ -82,7 +82,7 @@
                     <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                         <path d="M3 8L6 11L13 4" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
-                    Verificar Solución
+                    Verificar solución
                 </button>
             </div>
 
@@ -102,7 +102,7 @@
             </div>
             
             <div class="current-solution">
-                <h4>Solución Actual</h4>
+                <h4>Solución actual</h4>
                 <div id="currentSolution" class="solution-display">
                     <p class="empty-state">Selecciona elementos para comenzar</p>
                 </div>
@@ -121,11 +121,11 @@
                 <div id="resultContent" class="result-content"></div>
                 <div class="result-comparison">
                     <div class="comparison-item">
-                        <span class="comparison-label">Tu Solución:</span>
+                        <span class="comparison-label">Tu solución:</span>
                         <span class="comparison-value" id="yourSolution">0</span>
                     </div>
                     <div class="comparison-item">
-                        <span class="comparison-label">Solución Óptima:</span>
+                        <span class="comparison-label">Solución óptima:</span>
                         <span class="comparison-value optimal" id="optimalSolution">0</span>
                     </div>
                     <div class="comparison-item">
@@ -137,9 +137,9 @@
                 <div id="feedback" class="feedback-text"></div>
             </div>
             <div class="modal-footer">
-                <button class="btn btn-secondary" onclick="resetGame()">Intentar de Nuevo</button>
-                <button class="btn btn-primary" onclick="nextLevel()">Siguiente Nivel</button>
-                <button class="btn btn-secondary" onclick="backToLevels()">Ver Niveles</button>
+                <button class="btn btn-secondary" onclick="resetGame()">Intentar de nuevo</button>
+                <button class="btn btn-primary" onclick="nextLevel()">Siguiente nivel</button>
+                <button class="btn btn-secondary" onclick="backToLevels()">Ver niveles</button>
             </div>
         </div>
     </div>
@@ -148,7 +148,7 @@
     <div id="hintModal" class="modal">
         <div class="modal-content modal-small">
             <div class="modal-header">
-                <h2>💡 Pista Avanzada</h2>
+                <h2>💡 Pista avanzada</h2>
                 <button class="modal-close" onclick="closeHintModal()">&times;</button>
             </div>
             <div class="modal-body">
