--- a/game/guide.html
+++ b/game/guide.html
@@ -213,10 +213,10 @@
 
                 <section class="guide-section cta-section-guide">
                     <div class="cta-box">
-                        <h2>¿Listo para Empezar?</h2>
+                        <h2>¿Listo para empezar?</h2>
                         <p>Ahora que conoces cómo funciona el juego, ¡es hora de poner en práctica tus conocimientos!</p>
                         <a href="levels.html" class="btn btn-primary btn-large">
-                            <span>Ir a Niveles</span>
+                            <span>Ir a niveles</span>
                             <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
                                 <path d="M7 4L13 10L7 16" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
                             </svg>
