--- a/game/index.html
+++ b/game/index.html
@@ -51,7 +51,7 @@
             </p>
             <div class="hero-buttons">
                 <a href="levels.html" class="btn btn-primary">
-                    <span>Comenzar a Jugar</span>
+                    <span>Comenzar a jugar</span>
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
                         <path d="M7 4L13 10L7 16" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
                     </svg>
@@ -61,7 +61,7 @@
                         <path d="M10 18C14.4183 18 18 14.4183 18 10C18 5.58172 14.4183 2 10 2C5.58172 2 2 5.58172 2 10C2 14.4183 5.58172 18 10 18Z" stroke="currentColor" stroke-width="2"/>
                         <path d="M10 14V10M10 6H10.01" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
                     </svg>
-                    <span>Cómo Jugar</span>
+                    <span>Cómo jugar</span>
                 </a>
             </div>
         </div>
