--- a/game/index.html
+++ b/game/index.html
@@ -167,7 +167,7 @@
             <h2 class="cta-title">¿Listo para el desafío?</h2>
             <p class="cta-description">Únete a miles de estudiantes que ya están mejorando sus habilidades en optimización</p>
             <a href="levels.html" class="btn btn-primary btn-large">
-                <span>Empezar Ahora</span>
+                <span>Empezar ahora</span>
                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
                     <path d="M7 4L13 10L7 16" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
                 </svg>
