--- a/game/game.html
+++ b/game/game.html
@@ -71,12 +71,18 @@
 
         <div class="game-main">
             <div class="game-header">
+                <button class="btn btn-secondary" onclick="window.location.href='levels.html'">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
+                        <path d="M10 12L6 8L10 4" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                    Regresar
+                </button>
                 <button class="btn btn-secondary" onclick="resetGame()">
                     <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                         <path d="M2 8C2 4.68629 4.68629 2 8 2C11.3137 2 14 4.68629 14 8C14 11.3137 11.3137 14 8 14" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
                         <path d="M2 11V8H5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
-                    Reiniciar
+                    Intentar de nuevo
                 </button>
                 <button class="btn btn-primary" onclick="submitSolution()">
                     <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
